--- a/app/views/application/_sidebar_content.html.erb
+++ b/app/views/application/_sidebar_content.html.erb
@@ -1,5 +1,5 @@
-<div id="sidebar-content" data-turbolinks-permanent class="sidebar-collapse sidebar-scroller flex-grow-1 turbolinks-disable-scroll collapse">
-
+<div id="sidebar-content" data-turbo-permanent class="sidebar-collapse sidebar-scroller flex-grow-1 turbolinks-disable-scroll collapse">
+<turbo-frame id="sidebar-frame" target="_top">
 
 	<% if Course.modules.any? %>
 	<ul class="nav">
@@ -17,15 +17,17 @@
 	<% if current_module %>
 	<ul class="nav">
 		<li>
-			<p class="nav-head mx-1 text-dark">
-				<span id="schedule_name" class="<%= 'unavailable' if !current_module.public? %>"><%= current_module.name %></span>
+			<div class="nav-head mx-1 text-dark d-flex align-items-center flex-row">
+				<div id="schedule_name" class="<%= 'unavailable' if !current_module.public? %>">
+					<%= current_module.name %>
+				</div>
 				<% if current_schedule.self_service %>
-				<span class="float-right mr-n1 spr-1">
-					<%= link_to bootstrap_icon('chevron-left', class: 'rounded').html_safe, prev_module.present? ? profile_prev_path : '', method: :post, remote: true, id: 'schedule_prev_button', disabled:!prev_module.present? %>
-					<%= link_to bootstrap_icon('chevron-right', class: 'rounded').html_safe, next_module.present? ? profile_next_path : '', method: :post, remote: true, id: 'schedule_next_button', disabled:!next_module.present? %>
-				</span>
+				<div class="ml-auto mr-n1 spr-1">
+					<%= button_to prev_module.present? ? profile_prev_path : '', method: :post, id: 'schedule_prev_button', disabled:!prev_module.present?, class: 'btn btn-link p-0', form: { style: "display:inline;", data: {'turbo-frame' => 'sidebar-frame'} } do bootstrap_icon('chevron-left', class: 'rounded', style: 'vertical-align:-4px;').html_safe end %>
+					<%= button_to next_module.present? ? profile_next_path : '', method: :post, id: 'schedule_next_button', disabled:!next_module.present?, class: 'btn btn-link p-0', form: { style: "display:inline;", data: {'turbo-frame' => 'sidebar-frame'} } do bootstrap_icon('chevron-right', class: 'rounded', style: 'vertical-align:-4px;').html_safe end %>
+				</div>
 				<% end %>
-			</p>
+			</div>
 		</li>
 		<li id="schedule">
 			<%= links_to_ul(current_module.content) %>
@@ -61,4 +63,5 @@
 	</ul>
 	<% end %>
 
+</turbo-frame>
 </div>
