--- a/app/views/schedules/generate_groups/new.html.erb
+++ b/app/views/schedules/generate_groups/new.html.erb
@@ -4,7 +4,7 @@
 
 <p><strong>Do not use if groups have been generated before and TAs are/have been grading!!</strong></p>
 
-<%= form_tag schedule_generate_groups_path(schedule_id: params[:schedule_id]), :method => :post do %>
-<p><input type="number" name="number" min="1" required></p>
-<p><input type="submit" class="btn"></p>
+<%= form_tag schedule_generate_groups_path(schedule_id: params[:schedule_id]), method: :post, data: { 'turbo-frame' => '_top' } do %>
+<p class="mb-3"><input type="number" name="number" min="1" required></p>
+<p><input type="submit" class="btn btn-primary"></p>
 <% end %>
