--- a/app/views/alerts/_index.html.erb
+++ b/app/views/alerts/_index.html.erb
@@ -1,14 +1,17 @@
 <% @alerts.each do |alert| %>
 <div class="card mb-3">
-  <div class="card-body">
-    <h5 class="card-title"><%= alert.title %> <% if alert.published %><span class="badge bg-secondary">Published</span><% end %></h5>
-    <p class="card-text"><%= alert.body %></p>
-	<%= link_to 'Edit', edit_alert_path(alert), class: 'btn btn-link' %>
-	<%= button_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-link' %>
-  </div>
+	<div class="card-body">
+		<h5 class="card-title">
+			<%= alert.title %>
+			<% if alert.published %><span class="badge bg-secondary">Published</span><% end %>
+		</h5>
+		<p class="card-text"><%= alert.body %></p>
+		<%= link_to 'Edit', edit_alert_path(alert), class: 'btn btn-secondary' %>
+		<%= button_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-secondary' %>
+	</div>
 </div>
 <% end %>
 
 <div>
-<%= link_to 'New Alert', new_alert_path, class: 'btn btn-light' %>
+	<%= link_to 'New Alert', new_alert_path, class: 'btn btn-light' %>
 </div>
