--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -5,24 +5,24 @@
 	<%= menu_link 'Overview', overview_path, icon: 'columns' %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen' %>
 	<%= menu_link 'Hands', hands_path, icon: 'people-fill', condition: Settings.hands_allow %>
-	<%= menu_link 'Announcements...', alerts_path, icon: 'bell-fill', onclick: 'modalBrowser.show();', data: { 'turbo-frame' => 'modal' } %>
-	<%= menu_link 'Tests...', tests_path, icon: 'check', remote: true, condition: Settings.tests_present %>
-	<%= menu_link 'Set module...', edit_schedule_current_module_path(current_schedule), icon: 'calendar', remote: true, condition: current_schedule.can_admin_set_module? %>
+	<%= menu_link 'Announcements...', alerts_path, icon: 'bell-fill', target: 'modal' %>
+	<%= menu_link 'Tests...', tests_path, icon: 'check', target: 'modal', condition: Settings.tests_present %>
+	<%= menu_link 'Set module...', edit_schedule_current_module_path(current_schedule), icon: 'calendar', target: 'modal', condition: current_schedule.can_admin_set_module? %>
 <% end %>
 <% end %>
 
 <% if current_user.accessible_schedules.many? %>
 <%= menu_group 'Your schedules' do %>
 	<% current_user.accessible_schedules.all.each do |s| %>
-	<%= menu_link s.name, [current_user, user: {schedule_id: s.id}], method: :patch, icon: (s==current_schedule ? 'check' : nil) %>
+	<%= menu_link s.name, profile_set_schedule_path(schedule_id: s.id), method: :patch, icon: (s==current_schedule ? 'check' : nil) %>
 	<% end %>
 <% end%>
 <% end %>
 
 <%= menu_group 'Course' do %>
-	<%= menu_link 'Course administration...', admin_course_path, icon: 'inboxes', onclick: 'modalBrowser.show();', data: { 'turbo-frame' => 'modal' } %>
-	<%= menu_link 'Site configuration...', admin_site_path, icon: 'wrench', onclick: 'modalBrowser.show();', data: { 'turbo-frame' => 'modal' } %>
-	<%= menu_link 'Edit permissions...', admin_users_path, icon: 'unlock', onclick: 'modalBrowser.show();', data: { 'turbo-frame' => 'modal' } %>
+	<%= menu_link 'Course administration...', admin_course_path, icon: 'inboxes', target: 'modal' %>
+	<%= menu_link 'Site configuration...', admin_site_path, icon: 'wrench', target: 'modal' %>
+	<%= menu_link 'Edit permissions...', admin_users_path, icon: 'unlock', target: 'modal' %>
 	<%= menu_link 'Update courseware', admin_update_path, icon: 'download', method: :post %>
 <% end %>
 
@@ -36,7 +36,7 @@
 <%= menu_group current_schedule.name do %>
 	<%= menu_link 'Overview', overview_path, icon: 'columns' %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen' %>
-	<%= menu_link 'Tests...', tests_path, icon: 'check', remote: true, condition: Settings.tests_present %>
+	<%= menu_link 'Tests...', tests_path, icon: 'check', target: 'modal', condition: Settings.tests_present %>
 <% end %>
 <% end %>
 
@@ -59,5 +59,3 @@
 <% end%>
 
 <%= menu_link 'Logout', session_logout_path, icon: 'box-arrow-right' %>
-
-</turbo-frame>
