--- a/app/views/schedules/import_groups/new.html.erb
+++ b/app/views/schedules/import_groups/new.html.erb
@@ -2,7 +2,7 @@
 
 <p>Paste all data lines from a .xls datanose user export.</p>
 
-<%= form_tag schedule_import_groups_path(schedule_id: params[:schedule_id]), :method => :post do %>
-<textarea name="paste" class="form-control"><%= @paste %></textarea>
-<p><input type="submit" class="btn"></p>
+<%= form_tag schedule_import_groups_path(schedule_id: params[:schedule_id]), :method => :post, data: { 'turbo-frame' => '_top' } do %>
+<textarea name="paste" class="form-control mb-3"><%= @paste %></textarea>
+<p><input type="submit" class="btn btn-primary"></p>
 <% end %>
