--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -98,10 +98,23 @@ summary
 
 .menu-hidden
 {
-    background-color: #ff9966;
+	background-color: #ff9966;
 }
 
 #profile-dialog .modal-header
 {
 	background: linear-gradient(50deg, #FEF3BE 0%, #FDDED0 100%);	
 }
+
+.dropdown-menu
+{
+	@extend .shadow;
+	@extend .border-light;
+}
+
+.modal-content
+{
+	@extend .shadow-lg;
+	@extend .border-light;
+}
+
