--- a/app/views/admin/users/_schedule_permissions.html.erb
+++ b/app/views/admin/users/_schedule_permissions.html.erb
@@ -1,3 +1,3 @@
 <% schedules.each do |schedule| %>
-<%= button_to schedule.name, admin_user_remove_schedule_permission_path(user, schedule_id: schedule.id), method: :delete, remote: true, class: 'btn btn-link d-inline p-0' %>
+<%= button_to schedule.name, admin_user_remove_schedule_permission_path(user, schedule_id: schedule.id), method: :delete, remote: true, class: 'btn btn-link d-inline p-0' %>,
 <% end %>
