--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -3,17 +3,17 @@
 <%= form_with model: [:admin, @user] do |f| %>
 
 <div class="mb-3">
-	<label for="user_name">Full name</label>
+	<label for="user_name" class="ml-1 small">Full name</label>
 	<%= f.text_field :name, placeholder: 'Name', class: 'form-control', required: true %>
 </div>
 		
 <div class="mb-3">
-	<label for="user_mail">E-mail address</label>
+	<label for="user_mail" class="ml-1 small">E-mail address</label>
 	<%= f.text_field :mail, placeholder: 'E-mail', class: 'form-control', required: true %>
 </div>
 
 <% if Schedule.where(self_register: true).count >= 1 %>
-<div class="form-group">
+<div class="form-group mb-3">
 	<% Schedule.where(self_register: true).each do |schedule| %>
 	<div class="form-check">
 		<input type="radio" required class="form-check-input" name="user[schedule_id]" required id="optionsRadios<%= schedule.id %>" value="<%= schedule.id %>" <%= 'checked' if current_user && current_user.schedule && current_user.schedule.id == schedule.id %>>
