--- a/app/views/alerts/_index.html.erb
+++ b/app/views/alerts/_index.html.erb
@@ -6,12 +6,12 @@
 			<% if alert.published %><span class="badge bg-secondary">Published</span><% end %>
 		</h5>
 		<p class="card-text"><%= alert.body %></p>
-		<%= link_to 'Edit', edit_alert_path(alert), class: 'btn btn-secondary' %>
-		<%= button_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-secondary' %>
+		<%= link_to 'Edit', edit_alert_path(alert), class: 'btn btn-light' %>
+		<%= button_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-light' %>
 	</div>
 </div>
 <% end %>
 
-<div>
-	<%= link_to 'New Alert', new_alert_path, class: 'btn btn-light' %>
+<div class="d-flex justify-content-between">
+	<%= link_to 'New announcement', new_alert_path, class: 'btn btn-light ml-auto' %>
 </div>
