--- a/app/views/schedules/current_modules/edit.html.erb
+++ b/app/views/schedules/current_modules/edit.html.erb
@@ -1,11 +1,15 @@
-<h1>Set current module for <%= current_user.schedule.name %></h1>
+<h1>Set current module for <%= @schedule.name %></h1>
 
-<% schedule = current_user.schedule %>
-<%= form_with url: schedule_current_module_path(schedule), method: :put, local: false do |form| %>
-<% schedule.schedule_spans.each do |item| %>
-<%= form.radio_button(:item, item.id, checked: item == schedule.current, id: "#{schedule.name}#{item.id}", class: 'set-schedule', onclick: 'Rails.fire(form, "submit");') %>
-<%= label_tag "#{item.id}", item.name, for: "#{schedule.name}#{item.id}" %><br>
-<% end %>
-<%= form.radio_button(:item, 0, checked: nil == schedule.current, id: "#{schedule.name}0", class: 'set-schedule', onclick: 'Rails.fire(form, "submit");') %>
-<%= label_tag "(hide schedule)", "(hide schedule)", for: "#{schedule.name}0" %>
+<%= form_with url: schedule_current_module_path(@schedule), method: :put, local: false do |form| %>
+	<% @schedule.schedule_spans.each do |item| %>
+	<div class="mb-1">
+		<%= form.radio_button(:item, item.id, checked: item == @schedule.current, id: "#{@schedule.name}#{item.id}", class: 'set-schedule', onclick: 'Rails.fire(form, "submit");') %>
+		<%= label_tag "#{item.id}", item.name, for: "#{@schedule.name}#{item.id}" %>
+	</div>
+	<% end %>
+
+	<div>
+		<%= form.radio_button(:item, 0, checked: nil == @schedule.current, id: "#{@schedule.name}0", class: 'set-schedule', onclick: 'Rails.fire(form, "submit");') %>
+		<%= label_tag "(hide schedule)", "(hide schedule)", for: "#{@schedule.name}0" %>
+	</div>
 <% end %>
