--- a/app/views/alerts/edit.html.erb
+++ b/app/views/alerts/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Edit announcement</h1>
-<%= render 'form' %>
+<div class="modal-content">
+
+	<div id="modal-browser-header" class="modal-header align-items-start">
+		<h1>Edit announcement</h1>
+	</div>
+
+	<div id="modal-browser-body" class="modal-body">
+		<%= render 'form' %>
+	</div>
+
+</div>
