--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 	<div class="row <%= 'room-for-toc' if Settings.room_for_toc %>">
 		
-		<div id="sidebar" class="d-md-flex align-items-stretch flex-column flex-shrink-0 align-items-stretch shadow-sm" data-turbolinks-permanent>
+		<div id="sidebar" class="d-md-flex align-items-stretch flex-column flex-shrink-0 align-items-stretch shadow-sm">
 			<%= render 'sidebar' %>
 		</div>
 		
