--- a/app/views/admin/site/index.html.erb
+++ b/app/views/admin/site/index.html.erb
@@ -1,15 +1,23 @@
-<h1>Site configuration</h1>
+<div class="modal-content">
 
-<%= render partial: 'git', layout: 'modal_card', locals: { title: 'Git', subtitle: nil }%>
+	<div id="modal-browser-header">
+		<h1>Site configuration</h1>
+	</div>
 
-<%= render partial: 'email', layout: 'modal_card', locals: { title: 'E-mail', subtitle: nil } %>
+	<div id="modal-browser-body">
+		<%= render partial: 'git', layout: 'modal_card', locals: { title: 'Git', subtitle: nil }%>
 
-<%= render partial: 'settings', layout: 'modal_card', locals: { title: 'Settings', subtitle: nil }%>
+		<%= render partial: 'email', layout: 'modal_card', locals: { title: 'E-mail', subtitle: nil } %>
 
-<% if Dropbox::Client.available? %>
-<%= render partial: 'dropbox', layout: 'modal_card', locals: { title: 'Dropbox', subtitle: nil }%>
-<% end %>
+		<%= render partial: 'settings', layout: 'modal_card', locals: { title: 'Settings', subtitle: nil }%>
 
-<%= render partial: 'webhook', layout: 'modal_card', locals: { title: 'Webhook', subtitle: nil }%>
+		<% if Dropbox::Client.available? %>
+		<%= render partial: 'dropbox', layout: 'modal_card', locals: { title: 'Dropbox', subtitle: nil }%>
+		<% end %>
 
-<%= render partial: 'permissions', layout: 'modal_card', locals: { title: 'Permissions', subtitle: nil }%>
+		<%= render partial: 'webhook', layout: 'modal_card', locals: { title: 'Webhook', subtitle: nil }%>
+
+		<%= render partial: 'permissions', layout: 'modal_card', locals: { title: 'Permissions', subtitle: nil }%>
+	</div>
+
+</div>
