--- a/app/views/admin/users/create.html.erb
+++ b/app/views/admin/users/create.html.erb
@@ -1,3 +1,13 @@
-<p>Your new student can now login using this URL:</p>
+<div class="modal-content">
 
-<p><%= @url %></p>
+	<div id="modal-browser-header">
+		<h1>Add user</h1>
+	</div>
+
+	<div id="modal-browser-body">
+		<p>Your new student can now login using this URL:</p>
+
+		<p><%= @url %></p>
+	</div>
+
+</div>
