--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -1,2 +1,11 @@
-	<h1>New announcement</h1>
-	<%= render 'form' %>
+<div class="modal-content">
+
+	<div id="modal-browser-header">
+		<h1>New announcement</h1>
+	</div>
+
+	<div id="modal-browser-body">
+		<%= render 'form' %>
+	</div>
+
+</div>
