--- a/app/views/layouts/navbar.html.erb
+++ b/app/views/layouts/navbar.html.erb
@@ -1,5 +1,5 @@
 <% content_for :meta do %>
-<meta name="turbolinks-cache-control" content="no-cache">
+<meta name="turbo-cache-control" content="no-cache">
 <% end %>
 
 <% content_for :body do %>
