--- a/app/views/submissions/feedback.html.erb
+++ b/app/views/submissions/feedback.html.erb
@@ -1,2 +1,11 @@
-<h1>Automatic check results</h1>
-<pre><%= @formatted_feedback %></pre>
+<div class="modal-content">
+
+	<div id="modal-browser-header">
+		<h1>Automatic check results</h1>
+	</div>
+
+	<div id="modal-browser-body">
+		<pre><%= @formatted_feedback %></pre>
+	</div>
+
+</div>
