--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,39 +1,43 @@
-<%= render 'title' %>
+<div class="modal-content">
 
-<div>
-	<% 
-		subs = @student.submits.includes(:grade).group_by(&:pset_id)
-	%>
+	<div id="modal-browser-header">
+		<%= render 'title' %>
+	</div>
 
-	<% @psets.each do |pset| %>
-	<%= grade_button(@student, pset, subs)%>
-	<% end %>
-</div>
+	<div id="modal-browser-body">
+		<div>
+			<%
+			subs = @student.submits.includes(:grade).group_by(&:pset_id)
+			%>
 
-<div id="chart-1" style="height: 150px;"></div>
-<script>
-	new Chartkick.ColumnChart('chart-1', <%= JSON(@student.attendance_records.group_by_day(:cutoff, format: "%a %d-%m").count).html_safe %>)
-</script>
+			<% @psets.each do |pset| %>
+			<%= grade_button(@student, pset, subs)%>
+			<% end %>
+		</div>
 
-<div id="timeline" class="row">
-	<div class="col-sm-5">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<%= form_with model: @note, local: false do |f| %>
-				<%= f.hidden_field :student_id %>
-				<p><%= f.text_area :text, size: "x3", class: "form-control" %></p>
-				<p>
-					<span class="float-right">
-					<%= f.submit "Add note", class: "btn btn-primary" %>
-					</span>
-				</p>
-				<% end %>
-			</div>
+		<div id="chart-1" style="height: 150px;"></div>
+		<script>
+			new Chartkick.ColumnChart('chart-1', <%= JSON(@student.attendance_records.group_by_day(:cutoff, format: "%a %d-%m").count).html_safe %>)
+		</script>
+
+		<div id="timeline">
+			<%= render partial: 'hands_overview', object: @student.hands_overview %>
+			<%= render partial: "items/item", collection: @items %>
 		</div>
 	</div>
-	
-	<div class="col-sm-7">
-		<%= render partial: 'hands_overview', object: @student.hands_overview %>
-		<%= render partial: "items/item", collection: @items %>
+
+	<div id="modal-browser-footer">
+		<%= form_with model: @note, local: false, html: { class: 'w-100' } do |f| %>
+			<%= f.hidden_field :student_id %>
+			<div class="d-flex flex-row">
+				<div class="flex-fill">
+					<%= f.text_area :text, size: "x3", class: "form-control flex-fill" %>
+				</div>
+				<div class="ml-3">
+					<%= f.submit "Add note", class: "btn btn-primary" %>
+				</div>
+			</div>
+		<% end %>
 	</div>
+
 </div>
