--- a/app/views/application/_modal_browser.html.erb
+++ b/app/views/application/_modal_browser.html.erb
@@ -1,5 +1,5 @@
 <div id="modal-browser" class="modal" tabindex="-1" role="dialog">
-	<div class="modal-dialog modal-dialog-scrollable modal-lg modal-fullscreen-sm-down" role="document">
+	<div id="modal-browser-dialog" class="modal-dialog modal-dialog-scrollable modal-lg modal-fullscreen-sm-down" role="document">
 		<turbo-frame id="modal"></turbo-frame>
 	</div>
 </div>
