--- a/app/views/schedules/import_groups/new.html.erb
+++ b/app/views/schedules/import_groups/new.html.erb
@@ -1,8 +1,19 @@
-<h1>Import groups</h1>
+<div class="modal-content">
 
-<p>Paste all data lines from a .xls datanose user export.</p>
+	<div id="modal-browser-header">
+		<h1>Import groups</h1>
+	</div>
 
-<%= form_tag schedule_import_groups_path(schedule_id: params[:schedule_id]), :method => :post, data: { 'turbo-frame' => '_top' } do %>
-<textarea name="paste" class="form-control mb-3"><%= @paste %></textarea>
-<p><input type="submit" class="btn btn-primary"></p>
-<% end %>
+	<div id="modal-browser-body">
+		<p>Paste all data lines from a .xls datanose user export.</p>
+
+		<%= form_tag schedule_import_groups_path(schedule_id: params[:schedule_id]), :method => :post, data: { 'turbo-frame' => '_top' }, id: 'import_groups_form' do %>
+		<textarea name="paste" class="form-control" rows="10"><%= @paste %></textarea>
+		<% end %>
+	</div>
+
+	<div id="modal-browser-footer">
+		<input type="submit" class="btn btn-primary" form="import_groups_form">
+	</div>
+
+</div>
