--- a/app/views/submits/show.html.erb
+++ b/app/views/submits/show.html.erb
@@ -1,17 +1,11 @@
-<div class="modal-content">
+<% content_for :title do %>
+<%= render 'title' %>
+<% end %>
 
-	<div id="modal-browser-header" class="modal-header align-items-start">
-		<%= render 'title' %>
+<div class="tab-content" id="submit_tab_content">
+	<div class="tab-pane show active" id="submit-grading" role="tabpanel" aria-labelledby="submit-grading-tab">
+		<%= render partial: 'submits/summary' %>
+		<%= render @submit %>
 	</div>
-
-	<div id="modal-browser-body" class="modal-body">
-		<div class="tab-content" id="submit_tab_content">
-			<div class="tab-pane show active" id="submit-grading" role="tabpanel" aria-labelledby="submit-grading-tab">
-				<%= render partial: 'submits/summary' %>
-				<%= render @submit %>
-			</div>
-			<%= render partial: 'grading/file_panels', locals: { first: false } %>
-		</div>
-	</div>
-
+	<%= render partial: 'grading/file_panels', locals: { first: false } %>
 </div>
