--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,62 +1,56 @@
-<div class="modal-content">
+<% content_for :title do %>
+<h1>Permissions</h1>
+<% end %>
 
-	<div id="modal-browser-header">
-		<h1>Permissions</h1>
-	</div>
+<table class="table table-sm table-borderless">
+	<tr>
+		<th>Name</th>
+		<th>Role</th>
+		<th>Grade schedules</th>
+		<th>Grade groups</th>
+	</tr>
 
-	<div id="modal-browser-body">
-		<table class="table table-sm table-borderless">
-			<tr>
-				<th>Name</th>
-				<th>Role</th>
-				<th>Grade schedules</th>
-				<th>Grade groups</th>
-			</tr>
-
-		<% @users.each do |user| %>
-			<tr>
-				<td><%= link_to user.name, user %></td>
-				<td>
-					<%= user.role %>
-				</td>
-				<td>
-					<%= turbo_frame_tag "user_#{user.id}_schedule_permissions" do %>
-					<div id="schedule_permissions_<%= user.id %>">
-					<%= render partial: 'schedule_permissions', locals: { schedules: user.schedules, user: user } %>
-					</div>
-					<div class="btn-group">
-						<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<%= bootstrap_icon 'plus' %>
-						</button>
-						<ul class="dropdown-menu dropdown-menu-right">
-							<% @schedules.each do |schedule| %>
-							<%= button_to admin_user_add_schedule_permission_path(user_id: user.id, schedule_id: schedule.id), method: :post, remote: true, class:"dropdown-item" do schedule.name end %>
-							<% end %>
-						</ul>
-					</div>
+<% @users.each do |user| %>
+	<tr>
+		<td><%= link_to user.name, user %></td>
+		<td>
+			<%= user.role %>
+		</td>
+		<td>
+			<%= turbo_frame_tag "user_#{user.id}_schedule_permissions" do %>
+			<div id="schedule_permissions_<%= user.id %>">
+			<%= render partial: 'schedule_permissions', locals: { schedules: user.schedules, user: user } %>
+			</div>
+			<div class="btn-group">
+				<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<%= bootstrap_icon 'plus' %>
+				</button>
+				<ul class="dropdown-menu dropdown-menu-right">
+					<% @schedules.each do |schedule| %>
+					<%= button_to admin_user_add_schedule_permission_path(user_id: user.id, schedule_id: schedule.id), method: :post, remote: true, class:"dropdown-item" do schedule.name end %>
 					<% end %>
-				</td>
-				<td>
-					<%= turbo_frame_tag "user_#{user.id}_group_permissions" do %>
-					<div id="group_permissions_<%= user.id %>">
-					<%= render partial: 'group_permissions', locals: { groups: user.groups, user: user } %>
-					</div>
-					<div class="btn-group">
-						<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<%= bootstrap_icon 'plus' %>
-						</button>
-						<ul class="dropdown-menu dropdown-menu-right">
-							<% @groups.each do |group| %>
-							<%= button_to admin_user_add_group_permission_path(user_id: user.id, group_id: group.id), method: :post, remote: true, class:"dropdown-item" do "#{group.schedule.name} - #{group.name}" end %>
-							<% end %>
-						</ul>
-					</div>
+				</ul>
+			</div>
+			<% end %>
+		</td>
+		<td>
+			<%= turbo_frame_tag "user_#{user.id}_group_permissions" do %>
+			<div id="group_permissions_<%= user.id %>">
+			<%= render partial: 'group_permissions', locals: { groups: user.groups, user: user } %>
+			</div>
+			<div class="btn-group">
+				<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<%= bootstrap_icon 'plus' %>
+				</button>
+				<ul class="dropdown-menu dropdown-menu-right">
+					<% @groups.each do |group| %>
+					<%= button_to admin_user_add_group_permission_path(user_id: user.id, group_id: group.id), method: :post, remote: true, class:"dropdown-item" do "#{group.schedule.name} - #{group.name}" end %>
 					<% end %>
-				</td>
-			</tr>
-		<% end %>
+				</ul>
+			</div>
+			<% end %>
+		</td>
+	</tr>
+<% end %>
 
-		</table>
-	</div>
-
-</div>
+</table>
