--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,39 +1,33 @@
-<div class="modal-content">
+<% content_for :title do %>
+<h1>Add user</h1>
+<% end %>
 
-	<div id="modal-browser-header">
-		<h1>Add user</h1>
-	</div>
+<%= form_with model: [:admin, @user] do |f| %>
 
-	<div id="modal-browser-body">
-		<%= form_with model: [:admin, @user] do |f| %>
-
-		<div class="mb-3">
-			<label for="user_name" class="ml-1 small">Full name</label>
-			<%= f.text_field :name, placeholder: 'Name', class: 'form-control', required: true %>
-		</div>
-		
-		<div class="mb-3">
-			<label for="user_mail" class="ml-1 small">E-mail address</label>
-			<%= f.text_field :mail, placeholder: 'E-mail', class: 'form-control', required: true %>
-		</div>
-
-		<% if Schedule.where(self_register: true).count >= 1 %>
-		<div class="form-group mb-3">
-			<% Schedule.where(self_register: true).each do |schedule| %>
-			<div class="form-check">
-				<input type="radio" required class="form-check-input" name="user[schedule_id]" required id="optionsRadios<%= schedule.id %>" value="<%= schedule.id %>" <%= 'checked' if current_user && current_user.schedule && current_user.schedule.id == schedule.id %>>
-				<label for="optionsRadios<%= schedule.id %>">
-					<%= schedule.description || schedule.name %>
-				</label>
-			</div>
-			<% end %>
-		</div>
-		<% elsif Schedule.count == 1 %>
-		<%= hidden_field_tag "user[schedule_id]", Schedule.first.id %>
-		<% end %>
-		<%= f.submit class: 'btn btn-primary' %>
-
-		<% end %>
-	</div>
-
+<div class="mb-3">
+	<label for="user_name" class="ml-1 small">Full name</label>
+	<%= f.text_field :name, placeholder: 'Name', class: 'form-control', required: true %>
 </div>
+
+<div class="mb-3">
+	<label for="user_mail" class="ml-1 small">E-mail address</label>
+	<%= f.text_field :mail, placeholder: 'E-mail', class: 'form-control', required: true %>
+</div>
+
+<% if Schedule.where(self_register: true).count >= 1 %>
+<div class="form-group mb-3">
+	<% Schedule.where(self_register: true).each do |schedule| %>
+	<div class="form-check">
+		<input type="radio" required class="form-check-input" name="user[schedule_id]" required id="optionsRadios<%= schedule.id %>" value="<%= schedule.id %>" <%= 'checked' if current_user && current_user.schedule && current_user.schedule.id == schedule.id %>>
+		<label for="optionsRadios<%= schedule.id %>">
+			<%= schedule.description || schedule.name %>
+		</label>
+	</div>
+	<% end %>
+</div>
+<% elsif Schedule.count == 1 %>
+<%= hidden_field_tag "user[schedule_id]", Schedule.first.id %>
+<% end %>
+<%= f.submit class: 'btn btn-primary' %>
+
+<% end %>
